cmake_minimum_required(VERSION 3.16)
project(CS_22A)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS_22A Assignments/HelloWorld.cpp Assignments/BuyItems.cpp Assignments/PrintShape.cpp Assignments/EvaluateGrade.cpp AskForThreeAscendingNumbers.cpp Assignments/GenerateWithinRange.cpp Assignments/CalcTax.cpp Assignments/TestDriver.cpp Assignments/getAverageScore.cpp Assignments/moreFunctions.cpp Gaddis/Chapter2/sum.cpp Gaddis/Chapter2/SalesPrediction.cpp Midterms/areFirstTwoTheSameAsLastTwoChars.cpp Midterms/checkGradeList.cpp Gaddis/Chaper6_Functions/markup.cpp Assignments/test.cpp Midterms/isTheSmallestLast.cpp Midterms/checkYourGrade.cpp Midterms/GetScoreTotalWithoutHighLow.cpp)
add_executable(BuyItems Assignments/BuyItems.cpp)
add_executable(HelloWorld Assignments/HelloWorld.cpp)
add_executable(PrintShape Assignments/PrintShape.cpp)
add_executable(EvaluateGrade Assignments/EvaluateGrade.cpp)
add_executable(AskForThreeAscendingNumbers AskForThreeAscendingNumbers.cpp)
add_executable(GenerateWithinRange Assignments/GenerateWithinRange.cpp)
add_executable(CalcTax Assignments/CalcTax.cpp)
add_executable(Functions Assignments/TestDriver.cpp)
add_executable(TestDriver Assignments/TestDriver.cpp)
add_executable(getAverageScore Assignments/getAverageScore.cpp)

add_executable(moreFunctions Assignments/moreFunctions.cpp)

add_executable(sum Gaddis/Chapter2/sum.cpp)
add_executable(SalesPrediction Gaddis/Chapter2/SalesPrediction.cpp)
add_executable(midterms Midterms/areFirstTwoTheSameAsLastTwoChars.cpp)
add_executable(areFirstTwoTheSameAsLastTwoChars Midterms/areFirstTwoTheSameAsLastTwoChars.cpp)
add_executable(checkGradeList Midterms/checkGradeList.cpp)
add_executable(markup Gaddis/Chaper6_Functions/markup.cpp)
add_executable(test Assignments/test.cpp)
add_executable(isTheSmallestLast Midterms/isTheSmallestLast.cpp)
add_executable(checkYourGrade Midterms/checkYourGrade.cpp)
add_executable(GetScoreTotalWithoutHighLow Midterms/GetScoreTotalWithoutHighLow.cpp)